Several minor changes from school: Youtube and Instagram made clickable, other media removed. Menu scroll bug fixed. Text overflow on a page fixed.

--- a/kontakt/style.css
+++ b/kontakt/style.css
@@ -1,7 +1,9 @@
 body {
     background-color:rgb(10, 18, 42);
     margin:0;  
-
+}
+body.menuOpen {
+    overflow:hidden;
 }
 
 /* **** */
@@ -233,13 +235,15 @@ background-color:rgb(30, 60, 90);
     height:50px;
     width:50px;
 }
-#social1 {
-    float:left;
+.socials img:hover {
+    filter: drop-shadow(0 0 8px rgba(0, 0, 0,0.5));
 }
-#social3 {
-    float:right;
+#social2 {
+    margin-right: 2vw;
 }
-
+#social4 {
+    margin-left: 2vw;
+}
 @media (max-width: 1000px) {
     .navbar ul {
         display:none;
@@ -283,11 +287,13 @@ background-color:rgb(30, 60, 90);
         margin-left:auto;
         margin-top: -208px;
     }
-    #social1, #social2, #social3 {
+    #social1, #social2, #social3, #social4 {
         width:6vh;
         height:6vh;
         float:right;
-        margin-top:1vh;
+        margin-top:3vh;
+        margin-left:0;
+        margin-right:0;
     }
     #submit {
         margin:4px;
