--- a/omoss/style.css
+++ b/omoss/style.css
@@ -1,7 +1,9 @@
 body {
     background-color:rgb(10, 18, 42);
     margin:0;  
-
+}
+body.menuOpen {
+    overflow:hidden;
 }
 
 /* **** */
@@ -265,6 +267,9 @@ h1 {
         float:none;
         margin-top:2vh;
     }
+    #sC1 {
+        height:400px;
+    }
     #vC1 {
         width: 100%;
         height: 52.3vw;
@@ -272,7 +277,7 @@ h1 {
         float: none;
     }
     #section1 {
-        height: calc(1090px + 15vw + 10vh);
+        height: calc(1250px + 15vw + 10vh);
     }
     #section2 {
         margin-top: 80px;
